# BookNexus

./: CMakeLists.txt  Items.cpp  Items.h  Makefile  library.cpp  library.h  main.cpp
.github/workflows/: build.yml
testing/: tests.cpp
